--- a/Untitled64.ipynb
+++ b/Untitled64.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled64.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+wTP5KWHW1t3QpxoJHme9",
+      "authorship_tag": "ABX9TyP+OezLNV+c74pOLtLS4tCa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3164,12 +3164,12 @@
         "files.download('X.xlsx')"
       ],
       "metadata": {
-        "id": "HvSp2DeXOXdr",
-        "outputId": "9838336d-11ee-4f8c-aa51-379b66ddc735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "HvSp2DeXOXdr",
+        "outputId": "9838336d-11ee-4f8c-aa51-379b66ddc735"
       },
       "execution_count": 47,
       "outputs": [
@@ -3267,12 +3267,12 @@
         "df_demand_schedule"
       ],
       "metadata": {
-        "id": "IXWeK2VBP-kZ",
-        "outputId": "b6cffc8e-751a-4e6d-c936-2c040a444ae1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "IXWeK2VBP-kZ",
+        "outputId": "b6cffc8e-751a-4e6d-c936-2c040a444ae1"
       },
       "execution_count": 50,
       "outputs": [
@@ -3575,6 +3575,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "To download the table above "
+      ],
+      "metadata": {
+        "id": "N8lVKPW5VWHx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
@@ -3588,6 +3597,378 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Casting the required Feautures "
+      ],
+      "metadata": {
+        "id": "z2m5ziWCVCzB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_features=['date_week','sku_cde','Price_Elasticity_of_Demand for regular','Price_Elasticity_of_Demand for promo']\n",
+        "list_features"
+      ],
+      "metadata": {
+        "id": "NMPeT-R7Ulwa",
+        "outputId": "ef063cf9-6783-4f81-98b3-9a75659c9d38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['date_week',\n",
+              " 'sku_cde',\n",
+              " 'Price_Elasticity_of_Demand for regular',\n",
+              " 'Price_Elasticity_of_Demand for promo']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=df[list_features]\n",
+        "X"
+      ],
+      "metadata": {
+        "id": "WOHEjK00VCMG",
+        "outputId": "85c1ac05-382d-4fb8-fb2a-25814b1cf0eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "      date_week    sku_cde Price_Elasticity_of_Demand for regular  \\\n",
+              "0    2020-02-09   62875832                                      0   \n",
+              "1    2020-02-09   84630314                                    0.0   \n",
+              "2    2020-02-09   95208654                              -3.688525   \n",
+              "3    2020-02-09  111708109                                   -inf   \n",
+              "4    2020-02-16   73267284                                    inf   \n",
+              "..          ...        ...                                    ...   \n",
+              "846  2022-02-13   73267284                                  -10.0   \n",
+              "847  2022-02-13   84630314                               1.421053   \n",
+              "848  2022-02-13   95208654                               0.873016   \n",
+              "849  2022-02-13  111708109                                  -0.24   \n",
+              "850  2022-02-13   62875832                             -32.888889   \n",
+              "\n",
+              "    Price_Elasticity_of_Demand for promo  \n",
+              "0                                      0  \n",
+              "1                                      0  \n",
+              "2                                      0  \n",
+              "3                                      0  \n",
+              "4                                   -inf  \n",
+              "..                                   ...  \n",
+              "846                                    0  \n",
+              "847                                    0  \n",
+              "848                                    0  \n",
+              "849                                    0  \n",
+              "850                                    0  \n",
+              "\n",
+              "[851 rows x 4 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-20c426f7-15be-423c-b84d-b1af9ff5edd8\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date_week</th>\n",
+              "      <th>sku_cde</th>\n",
+              "      <th>Price_Elasticity_of_Demand for regular</th>\n",
+              "      <th>Price_Elasticity_of_Demand for promo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2020-02-09</td>\n",
+              "      <td>62875832</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-02-09</td>\n",
+              "      <td>84630314</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020-02-09</td>\n",
+              "      <td>95208654</td>\n",
+              "      <td>-3.688525</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-02-09</td>\n",
+              "      <td>111708109</td>\n",
+              "      <td>-inf</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2020-02-16</td>\n",
+              "      <td>73267284</td>\n",
+              "      <td>inf</td>\n",
+              "      <td>-inf</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>846</th>\n",
+              "      <td>2022-02-13</td>\n",
+              "      <td>73267284</td>\n",
+              "      <td>-10.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>847</th>\n",
+              "      <td>2022-02-13</td>\n",
+              "      <td>84630314</td>\n",
+              "      <td>1.421053</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>848</th>\n",
+              "      <td>2022-02-13</td>\n",
+              "      <td>95208654</td>\n",
+              "      <td>0.873016</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>849</th>\n",
+              "      <td>2022-02-13</td>\n",
+              "      <td>111708109</td>\n",
+              "      <td>-0.24</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>850</th>\n",
+              "      <td>2022-02-13</td>\n",
+              "      <td>62875832</td>\n",
+              "      <td>-32.888889</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>851 rows × 4 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-20c426f7-15be-423c-b84d-b1af9ff5edd8')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-20c426f7-15be-423c-b84d-b1af9ff5edd8 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-20c426f7-15be-423c-b84d-b1af9ff5edd8');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To download the table above "
+      ],
+      "metadata": {
+        "id": "1qVexFG_VcHU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "X.to_excel('X.xlsx') \n",
+        "files.download('X.xlsx')"
+      ],
+      "metadata": {
+        "id": "PEKWeH1hVdKK",
+        "outputId": "095999ae-4ea1-4cbb-bf4f-aee35c079f39",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_a356466d-282e-432f-9f75-5ebf76bf5bfc\", \"X.xlsx\", 30639)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "import seaborn as sns\n",
@@ -3596,12 +3977,12 @@
         "plt.show"
       ],
       "metadata": {
-        "id": "jEu5krYENpTl",
-        "outputId": "82d4dea1-3bf2-4aa0-9db3-c715d7596b72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 741
-        }
+        },
+        "id": "jEu5krYENpTl",
+        "outputId": "82d4dea1-3bf2-4aa0-9db3-c715d7596b72"
       },
       "execution_count": 53,
       "outputs": [
@@ -3636,12 +4017,12 @@
         "plt.show"
       ],
       "metadata": {
-        "id": "OcHq5OxSQ9d0",
-        "outputId": "e8e26f08-0cea-47c6-f92c-ae3341405d30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 741
-        }
+        },
+        "id": "OcHq5OxSQ9d0",
+        "outputId": "e8e26f08-0cea-47c6-f92c-ae3341405d30"
       },
       "execution_count": 54,
       "outputs": [
