--- a/Untitled64.ipynb
+++ b/Untitled64.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled64.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+OezLNV+c74pOLtLS4tCa",
+      "authorship_tag": "ABX9TyMv1QOzq0L0DTyya9xlfvzb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2074,7 +2074,7 @@
       "source": [
         "**Price elasticity of demand measures the relative percentage change in Quantity**\n",
         "\n",
-        "*   Price elasticity of demand measures the realtive percentage change in Quantity of a good and services in relative to percentage change in price of the goods and services. \n",
+        "*   Price elasticity of demand measures the relative percentage change in Quantity of a good and services in relative to percentage change in price of the goods and services. \n",
         "*   Price elasticities of demand are always negative since price and quantity\n",
         "demanded always move in opposite directions (on the demand curve). By\n",
         "convention, we always talk about elasticities as positive numbers. Mathematically, we take the absolute value of the result.\n",
@@ -3612,11 +3612,11 @@
         "list_features"
       ],
       "metadata": {
-        "id": "NMPeT-R7Ulwa",
-        "outputId": "ef063cf9-6783-4f81-98b3-9a75659c9d38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NMPeT-R7Ulwa",
+        "outputId": "ef063cf9-6783-4f81-98b3-9a75659c9d38"
       },
       "execution_count": 59,
       "outputs": [
@@ -3642,12 +3642,12 @@
         "X"
       ],
       "metadata": {
-        "id": "WOHEjK00VCMG",
-        "outputId": "85c1ac05-382d-4fb8-fb2a-25814b1cf0eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "WOHEjK00VCMG",
+        "outputId": "85c1ac05-382d-4fb8-fb2a-25814b1cf0eb"
       },
       "execution_count": 60,
       "outputs": [
@@ -3879,6 +3879,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "*   if the price elasticity is greater than 1 it is elastic, then the company should cut the price, because the percentage drop in price will result in an even larger percentage increase in the quantity sold.\n",
+        "However \n",
+        "*  if the price elasticity is lesser than 1 it is inelastic, means a large drop in price of the goods and services\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MC4Lk8IvWHws"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "To download the table above "
       ],
       "metadata": {
@@ -3893,12 +3907,12 @@
         "files.download('X.xlsx')"
       ],
       "metadata": {
-        "id": "PEKWeH1hVdKK",
-        "outputId": "095999ae-4ea1-4cbb-bf4f-aee35c079f39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "PEKWeH1hVdKK",
+        "outputId": "095999ae-4ea1-4cbb-bf4f-aee35c079f39"
       },
       "execution_count": 61,
       "outputs": [
