--- a/Untitled64.ipynb
+++ b/Untitled64.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled64.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMv1QOzq0L0DTyya9xlfvzb",
+      "authorship_tag": "ABX9TyOBLqFXoD4LphgXbGmVj1tw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3881,9 +3881,9 @@
       "source": [
         "\n",
         "\n",
-        "*   if the price elasticity is greater than 1 it is elastic, then the company should cut the price, because the percentage drop in price will result in an even larger percentage increase in the quantity sold.\n",
+        "*   if the price elasticity of demand is greater than 1 it is elastic, then the company should cut the price, because the percentage drop in price will result in an even larger percentage increase in the quantity sold.\n",
         "However \n",
-        "*  if the price elasticity is lesser than 1 it is inelastic, means a large drop in price of the goods and services\n",
+        "*  if the price elasticity of demand is lesser than 1 it is inelastic\n",
         "\n"
       ],
       "metadata": {
